<resources>
    <string name="app_name">WorkTracker</string>
    <string name="title_home">Raports list</string>
    <string name="title_dashboard">Add Raport</string>
    <string name="title_notifications">Raport diagrams</string>
    <string name="enterCompany">Company name :</string>
    <string name="pickStartDate">Pick start time :</string>
    <string name="pickEndDate">Pick end time :</string>
    <string name="addRaport">Submit</string>
    <string name="all">All</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="pickDate">Pick date:</string>
    <string name="seletDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="fillEmpty">Fill empty fields</string>
    <string name="addedRaport">Added raport</string>
    <string name="timeError">You can\'t work negative hours number.</string>
    <string name="hour">h</string>
    <string name="and">and</string>
    <string name="minutes">min.</string>
    <string name="alertTitle">Delete</string>
    <string name="alertQuestion">Do you want to delete this item ?</string>
    <string name="deleted">Deleted</string>
    <string name="aborted">Aborted</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="workHours">Work hours</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>
