<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".AddRaportFragment"
             android:background="@color/primaryColor"
                android:orientation="horizontal"
                android:padding="30dip">

    <TextView
            android:id="@+id/textViewComapny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/enterCompany"
            android:gravity="center"/>
    <EditText
            android:id="@+id/entryCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_below="@+id/textViewComapny"
            android:gravity="center"/>
    <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/pickDate"
            android:layout_below="@+id/entryCompany"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in_date"
            android:layout_below="@+id/textViewDate"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"/>
    <Button
            android:id="@+id/selectDateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seletDate"
            android:textSize="11sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@+id/textViewDate"
            android:layout_alignParentRight="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>
    <TextView
            android:id="@+id/textViewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/pickStartDate"
            android:layout_below="@+id/selectDateBtn"
            android:gravity="center"
            android:layout_marginTop="20dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in_startTime"
            android:layout_below="@+id/textViewStart"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="17dp"/>
    <Button
            android:id="@+id/selectStartTimeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectTime"
            android:textSize="11sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@+id/textViewStart"
            android:layout_alignParentRight="true"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"/>
    <TextView
            android:id="@+id/textViewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/pickEndDate"
            android:layout_below="@+id/in_startTime"
            android:gravity="center"
            android:layout_marginTop="15dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/in_endTime"
            android:layout_below="@+id/textViewEnd"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"/>
    <Button
            android:id="@+id/selectEndTimeBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectTime"
            android:textSize="11sp"
            android:background="@color/colorPrimary"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@+id/textViewEnd"
            android:layout_alignParentRight="true"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"/>

    <Button
            android:id="@+id/addRaportBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addRaport"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="62dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="62dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/cardview_light_background"
            android:layout_below="@+id/selectEndTimeBtn"
            android:layout_marginTop="30dp"/>

</RelativeLayout>